--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>About HTMLGenie</title>
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <style>
 body {
@@ -128,5 +129,9 @@ p.unfinished::after {
 <h3 id="rB">Results</h3>
 <p>This part is the finished product. The user can change anything about it with the previously mentioned layouts.</p>
 <b>Help is greatly appreciated. Why not share this page on Facebook or Twitter?</b>
+<br>
+<iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fchocolatecircus445.github.io%2Fhtmlgenie%2F&layout=button_count&size=small&mobile_iframe=true&width=69&height=20&appId" width="69" height="20" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+<br>
+<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-url="https://chocolatecircus445.github.io/htmlgenie/" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
