--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>About HTMLGenie</title>
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link rel="icon" type="image/png" sizes="192x192" href="editor/favicon.png">
 </head>
 <style>
 body {
