--- a/editor/editor.html
+++ b/editor/editor.html
@@ -56,7 +56,7 @@ if (settings.displayNotificationOnReload) {
       <tbody>
     <tr>
     <td>
-      <a href="chocolatecircus445.github.io/htmlgenie"><img id="logo" src="svg/logo.svg" width="80" height="60"></a>
+      <a href="https://chocolatecircus445.github.io/htmlgenie"><img id="logo" src="svg/logo.svg" width="80" height="60"></a>
     </td>
     <td>
       <!--The menu for the user's website-->
