--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link rel="icon" type="image/png" sizes="192x192" href="editor/favicon.png">
+  <meta property="og:title" content="HTMLGenie">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="HTMLGenie">
+  <meta name="twitter:description" content="HTMLGenie is a project that aims to teach children about open source projects by building their own websites. The semantics aren't quite figured out yet, but hopefully they will be soon. HTMLGenie lets children build their own websites in blocks, similar to Scratch and Snap!.">
+  <meta name="twitter:image" content="https://chocolatecircus445.github.io/htmlgenie/img/1.png">
 </head>
 <style>
 body {
