Added a button for the GitHub repository

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@ p.unfinished::after {
   <form action="https://chocolatecircus445.github.io/htmlgenie/editor/editor.html">
   <button class="tryButton" type="submit">Try it</button>
   </form>
+  <form action="https://github.com/ChocolateCircus445/htmlgenie">
+  <button class="tryButton" type="submit"><i class="fab fa-github"></i><span> View our GitHub repository</span></button>
+  </form>
   <p>
     HTMLGenie is a project that aims to teach children about open source projects by building their own websites.
     The semantics aren't quite figured out yet, but hopefully they will be soon.
